# livrariaFabrica

./: .gitignore  README.md  db.sqlite3  livraria.json  livraria_bkp.json  pyproject.toml
config/: settings.py  urls.py
livraria/: admin.py  models.py  serializers.py  views.py
livraria/migrations/: 0001_initial.py  0002_autor_editora_livro.py  0003_livro_autores.py
livraria/models/: livro.py
livraria/serializers/: __init__.py  autor.py  categoria.py  editora.py  livro.py
livraria/views/: __init__.py  autor.py  categoria.py  editora.py  livro.py
uploader/: views.py
usuario/migrations/: 0001_initial.py
